install laravel-passport and configured it
