# app/app/Models/User.php
@@ -7,8 +7,19 @@ use Illuminate\Database\Eloquent\Relations\HasMany;
 use Illuminate\Database\Eloquent\Relations\HasOne;
 use Illuminate\Foundation\Auth\User as Authenticatable;
 use Illuminate\Notifications\Notifiable;
+use Laravel\Passport\HasApiTokens;
 
 /**
+ *
+ * @OA\Schema(
+     * required={"password"},
+     * @OA\Xml(name="User"),
+     * @OA\Property(property="id", type="integer", readOnly="true", example="1"),
+     * @OA\Property(property="email", type="string", readOnly="true", format="email", description="User unique email address", example="user@gmail.com"),
+     * @OA\Property(property="email_verified_at", type="string", readOnly="true", format="date-time", description="Datetime marker of verification status", example="2019-02-25 12:59:20"),
+     * @OA\Property(property="name", type="string", maxLength=32, example="Anton"),
+ * )
+ *
  * @property string name user name
  * @property string password user password
  * @property string ip user ip
@@ -17,7 +28,7 @@ use Illuminate\Notifications\Notifiable;
  */
 class User extends Authenticatable
 {
-    use HasFactory, Notifiable;
+    use HasFactory, Notifiable, HasApiTokens;
 
     protected $fillable = [
         'name', 'email', 'password', 'ip', 'banned',
